--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Definitely talk with a TA or your instructor if you get tripped up during this c
                 <h1 class="titleName"> Hang Man </h1>
                 <div class="subtitle">
                     <h6>by</h6>
-                    <h5>John Eric Ward</h5>
+                    <h5>E Ward</h5>
                     <h5><span id="startMessageCSS"></span></h5>
                 </div>
             </div>
@@ -112,24 +112,29 @@ Definitely talk with a TA or your instructor if you get tripped up during this c
             <div class="col-lg"></div>
         </div>
         <div class="row">
-            <div class="col-lg">
+            <div class="col-lg-2">
                 <h3>Score: <span id=scoreCSS>0</span></h3>
                 <br>
                 <h3>Wrong Letters: <span id="wrongLettersCSS"></span></h3>
                 <br>
                 <h3>Strikes: <span id="strikesCSS">0</span>/10 </h3>
             </div>
-            <div class="col-lg-10">
+            <div class="col-lg-8">
                 <div class="letterPressCSS">
                     <h2>
                         <div id="letterPress"></div>
                     </h2>
                 </div>
             </div>
-            <div class="col-lg"></div>
+            <div class="col-lg-2">
+                <div class="hangmanPic"></div>
+            </div>
         </div>
     </div>
 
 </body>
+
+<!-- jquery -->
+<script src="https://code.jquery.com/jquery.js"></script>
 
 </html>
